--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
         <nav>
-            <div class="nav-left"></div>
+        <div class="nav-left">
             <img src="images/logo.png" class="logo">
             <ul>
                 <li><img src="images/notification.png"></li>
                 <li><img src="images/inbox.png"></li>
                 <li><img src="images/video.png"></li>
-
             </ul>
-            <div class="nav-right"></div>
+        </div>
+        <div class="nav-right">
+
+                 <div class="search-box">
+                    <img src="images/search.png">
+                    <input type="text" placeholder="Search">
+                 </div>
+                 <div class="nav-user-icon online">
+                    <img src="images/profile-pic.png" >
+                 </div>
+
+        </div>
         </nav>
     </body>
 </html>
