add function latest news, friends, group, marketplace..

--- a/index.html
+++ b/index.html
@@ -32,8 +32,20 @@
         </nav>
 
         <div class="container">
-            <div class="left-sidebar"></div>
+            <!-----------------left-sidebar-------------- -->
+            <div class="left-sidebar">
+                <div class="imp-links">
+                    <a href="#"><img src="images/news.png"> Latest News</a>
+                    <a href="#"><img src="images/friends.png"> Friends</a>
+                    <a href="#"><img src="images/group.png"> Group</a>
+                    <a href="#"><img src="images/marketplace.png"> Marketplace</a>
+                    <a href="#"><img src="images/watch.png"> Watch</a>
+
+                </div>
+            </div>
+            <!----------------main-content-------------- -->
             <div class="main-content"></div>
+            <!----------------right-sidebar-------------- -->
             <div class="right-sidebar"></div>
         </div>
 
