--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     <a href="#"><img src="images/group.png"> Group</a>
                     <a href="#"><img src="images/marketplace.png"> Marketplace</a>
                     <a href="#"><img src="images/watch.png"> Watch</a>
+                    <a href="#"> See More</a>
+
 
                 </div>
             </div>
