--- a/index.html
+++ b/index.html
@@ -41,9 +41,16 @@
                     <a href="#"><img src="images/marketplace.png"> Marketplace</a>
                     <a href="#"><img src="images/watch.png"> Watch</a>
                     <a href="#"> See More</a>
-
+                </div>
+                <div class="shorcut-links">
+                    <p>Your Shortcut</p>
+                    <a href="#"><img src="images/shortcut-1.png"> Web Developers</a>
+                    <a href="#"><img src="images/shortcut-2.png"> Web Design course</a>
+                    <a href="#"><img src="images/shortcut-3.png"> Full Stack Development</a>
+                    <a href="#"><img src="images/shortcut-4.png"> Website Experts</a>
 
                 </div>
+                
             </div>
             <!----------------main-content-------------- -->
             <div class="main-content"></div>
