--- a/index.html
+++ b/index.html
@@ -48,14 +48,19 @@
                     <a href="#"><img src="images/shortcut-2.png"> Web Design course</a>
                     <a href="#"><img src="images/shortcut-3.png"> Full Stack Development</a>
                     <a href="#"><img src="images/shortcut-4.png"> Website Experts</a>
-
-                </div>
-                
+                </div>         
             </div>
             <!----------------main-content-------------- -->
             <div class="main-content"></div>
             <!----------------right-sidebar-------------- -->
-            <div class="right-sidebar"></div>
+            <div class="right-sidebar">
+
+                <div class="sidebar-title">
+                    <h4>Events</h4>
+                    <a href="#">See All</a>
+                </div>
+
+            </div>
         </div>
 
     </body>
