--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Facebook Fanpage</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/b7524bab5c.js" crossorigin="anonymous"></script>
     </head>
     <body>
 
@@ -51,7 +52,32 @@
                 </div>         
             </div>
             <!----------------main-content-------------- -->
-            <div class="main-content"></div>
+            <div class="main-content">
+
+                <div class="story-gallery">
+                    <div class="story story1">
+                      <img src="images/upload.png">  
+                      <p>Post Story</p>
+                    </div>
+                    <div class="story story2">
+                      <img src="images/member-1.png">  
+                      <p>Phan Tiến Quang</p>
+                    </div>
+                    <div class="story story3">
+                      <img src="images/member-2.png">  
+                      <p>Minh Tuyền</p>
+                          </div>
+                    <div class="story story4">
+                      <img src="images/member-3.png">  
+                      <p>Tinh Tieu</p>
+                          </div>
+                    <div class="story story5">
+                      <img src="images/member-4.png">  
+                      <p>Trúc Nguyễn</p>
+                          </div>
+                </div>
+
+            </div>
             <!----------------right-sidebar-------------- -->
             <div class="right-sidebar">
 
@@ -60,7 +86,60 @@
                     <a href="#">See All</a>
                 </div>
 
+                <div class="event">
+                    <div class="left-event">
+                        <h3>16</h3>
+                        <span>September</span>
+                    </div>
+                    <div class="right-event">
+                        <h4>JavaScript Course</h4>
+                        <p><i class="fa-solid fa-location-dot"></i> At Home</p>
+                        <a href="#">More Info</a>
+                    </div>
+                </div>
+                <div class="event">
+                    <div class="left-event">
+                        <h3>19</h3>
+                        <span>September</span>
+                    </div>
+                    <div class="right-event">
+                        <h4>HTML and CSS Course</h4>
+                        <p><i class="fa-solid fa-location-dot"></i> At Home</p>
+                        <a href="#">More Info</a>
+                    </div>
             </div>
+            <div class="sidebar-title">
+                <h4>Advertisement</h4>
+                <a href="#">Close</a>
+            </div>
+            <img src="images/advertisement.png" class="sidebar-ads">
+
+            <div class="sidebar-title">
+                <h4>Conversation</h4>
+                <a href="#">Hide Chat</a>
+            </div>
+
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-1.png">
+                </div>
+                <p>Phan Tiến Quang</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-2.png">
+                </div>
+                <p>Minh Tuyền</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-3.png">
+                </div>
+                <p>Tinh Tieu</p>
+            </div>
+
+
+
         </div>
 
     </body>
