add post statues

--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
                           </div>
                 </div>
 
+                <div class="write-post-container">
+                    <div class="user-profile">
+                        <img src="images/profile-pic.png">
+                    <div>
+                        <p>Nguyễn Thanh Tùng</p>
+                        <small>Public <i class="fa-solid fa-caret-down"></i></small>
+                    </div>    
+                    </div>
+
+                    <div class="post-input-container">
+                        <textarea rows="3" placeholder="What's on your mind, Tùng"></textarea>
+
+                        
+                    </div>
+                    
+                </div>
+
+
+
+
             </div>
             <!----------------right-sidebar-------------- -->
             <div class="right-sidebar">
